--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,8 +27,11 @@ markdown_extensions:
   - fenced_code
   - attr_list
   - md_in_html
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 extra:
   static_files:
     - media
 repo_url: https://github.com/PavSedl/RAILDUINO
-site_url: https://PavSedl.github.io/RAILDUINO/docs/
+site_url: https://PavSedl.github.io/RAILDUINO
