--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
           path: ~/.cache 
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs mkdocs-material mkdocs-mermaid2-plugin
+      - run: pip install mkdocs mkdocs-material mkdocs-mermaid2-plugin pymdown-extensions
       - run: mkdocs gh-deploy --force --config-file mkdocs.yml
