--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.13'
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache 
-          restore-keys: |
-            mkdocs-material-
       - run: pip install mkdocs mkdocs-material mkdocs-mermaid2-plugin pymdown-extensions
-      - run: mkdocs gh-deploy --force --config-file mkdocs.yml
+      - run: mkdocs gh-deploy --force
