--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - Description: description.md
   - Commisioning: installation.md
   - Connection: connection.md
+  - Webserver: webserver.md
   - Modbus settings: modbus.md
   - UDP settings: udp.md
   - Loxone Examples - Modbus: modbus_examples.md
